entr page: fix vertical offset of comments relative to labels
In the history section the contents of the comments, refs, and
diff cells (3rd column in hist table) had too much space at their
tops (nearly the full height of a text line) causing them to appear
vertically negatively offset with respect to the labels in the cells
to their left (column 2).  Css margin change seems to have fixed
that.  Also, reducing margin at bottom (which was same as top)
places rows closer together which I like.

--- a/web/jmdict.css
+++ b/web/jmdict.css
@@ -12,8 +12,9 @@
 .caution	{color: #FF0000}
 .notice		{font-size: 65%; color: #FF0000}
 .notes		{font-size: 75%;}
-.preformat	{margin-left: 2em; white-space: pre-wrap;
-		 font-size:110%; font-family: monospace}
+.preformat	{margin: 1px 1px 1px 1em; white-space: pre-wrap;
+		 font-size:110%; font-family: monospace;
+                 padding 2px; }
 .histtab	{border-style: solid; border-width: thin; border-color: #A0A0A0; 
 		 padding: 5px; font-size: 75%}
 .submitter_name {font-weight: 700}
